--- a/birthday_buddy/src/index.css
+++ b/birthday_buddy/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        @apply bg-[#ffef45];
+        font-family: 'Nunito Sans Variable', sans-serif;
+    }
+}
+
